--- a/新闻详细页.html
+++ b/新闻详细页.html
@@ -15,7 +15,7 @@
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <title>新闻详细页</title>
+    <title>新闻详细页1</title>
 </head>
 <body>
 <div class="container showgrid">
